--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 	<div id="data" style="position: absolute; top: 0px; left: 0px; width: 20%; max-width: 20%; z-index: 1; padding-top: 30px; padding-left: 60px;">
         <h2>Kent Beck: A Year's Worth</h2>
-        A few christmases ago I was messing about creating bubble maps - do doubt in some mince pie and port induced state of inebriation (quality of code is consequently as you'd expect).
+        A few christmases ago I was messing about creating bubble maps - no doubt in some mince pie and port induced state of inebriation (quality of code is consequently as you'd expect).
         <p/>
         I'd long forgotten about this until <a href="https://www.kentbeck.com/">Kent Becks</a> recent post on <a href="https://medium.com/">medium.com</a> about trying to understand <a href="https://medium.com/@kentbeck_7670/a-years-worth-c1cbc3085e9d">A Year's Worth</a> of effort.
         
